<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HttpPinger</string>
    <string name="in_url">http://www.google.com</string>
    <string name="in_per">60</string>
    
    <!-- RUS -->
    <string name="app_ntfrus">HttpPinger\u0020\u0437\u0430\u043F\u0443\u0449\u0435\u043D</string>
    <string name="lb_urlrus">URL</string>
    <string name="lb_perrus">\u041F\u0435\u0440\u0438\u043E\u0434\u0020\u043E\u043F\u0440\u043E\u0441\u0430</string>
    <string name="bt_runrus">\u041F\u0443\u0441\u043A!</string>
    <string name="bt_stprus">\u0421\u0442\u043E\u043F</string>
    <string name="ch_logrus">\u041B\u043E\u0433</string>
    <string name="btexitrus">\u0412\u044B\u0445\u043E\u0434</string>
    <string name="sp_perrus">\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0435\u0434\u0438\u043D\u0438\u0446\u0443\u0020\u0438\u0437\u043C\u0435\u0440\u0435\u043D\u0438\u044F</string>
    <string-array name="sp_perrus">
        <item >\u0421\u0435\u043A.</item>
        <item >\u041C\u0438\u043D.</item>
        <item >\u0427\u0430\u0441</item>
    </string-array>
    <string name="rq_urlrus">\u0412\u0432\u0435\u0434\u0438\u0442\u0435\u0020URL</string>
    <string name="rq_perrus">\u0412\u0432\u0435\u0434\u0438\u0442\u0435\u0020\u043F\u0435\u0440\u0438\u043E\u0434\u0020\u043E\u043F\u0440\u043E\u0441\u0430</string>
    <string name="tb_pngrus">Pinger</string>
    <string name="tb_hstrus">\u0416\u0443\u0440\u043D\u0430\u043B</string>
    <string name="ch_macrus">MAC</string>
    <string name="mnclerrus">\u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C</string>
    <string name="mnrefrrus">\u041E\u0431\u043d\u043E\u0432\u0438\u0442\u044C</string>
    <string name="cmtitlrus">\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044f</string>
    <string name="cm_delrus">\u0423\u0434\u0430\u043B\u0438\u0442\u044C</string>
    <string name="mntoolrus">\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438</string>
    <string name="mnexitrus">\u0412\u044b\u0445\u043e\u0434</string>
    <string name="lblangrus">\u042f\u0437\u044b\u043a</string>
    <string name="splangrus">\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u044f\u0437\u044b\u043a</string>
    <string-array name="splangrus">
        <item >\u0420\u0443\u0441\u0441\u043a\u0438\u0439</item>
        <item >\u0410\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439</item>
    </string-array>
    <string name="btsaverus">\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c</string>
    
    <!-- ENG -->
    <string name="app_ntfeng">HttpPinger is running</string>
    <string name="lb_urleng">URL</string>
    <string name="lb_pereng">Ping timeout</string>
    <string name="bt_runeng">Run!</string>
    <string name="bt_stpeng">Stop</string>
    <string name="ch_logeng">Logging</string>
    <string name="btexiteng">Exit</string>
    <string name="sp_pereng">Choose timeout preference</string>
    <string-array name="sp_pereng">
        <item >Second</item>
        <item >Minute</item>
        <item >Hour</item>
    </string-array>
    <string name="rq_urleng">Fill in URL</string>
    <string name="rq_pereng">Fill in timeout value</string>
    <string name="tb_pngeng">Pinger</string>
    <string name="tb_hsteng">History</string>
    <string name="ch_maceng">MAC</string>
    <string name="mnclereng">Clear</string>
    <string name="mnrefreng">Refresh</string>
    <string name="cmtitleng">Actions</string>
    <string name="cm_deleng">Delete</string>
    <string name="mntooleng">Tools</string>
    <string name="mnexiteng">Exit</string>
    <string name="lblangeng">Language</string>
    <string name="splangeng">Choose language</string>
    <string-array name="splangeng">
        <item >Russian</item>
        <item >English</item>
    </string-array>
    <string name="btsaveeng">Save</string>
</resources>