<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblangrus" />

        <Spinner
            android:id="@+id/splang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:prompt="@string/splangrus"/>

        <Button
            android:id="@+id/btsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btsaverus" />

    </LinearLayout>
